tmv-checklist/infra/k8s/auth-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      automountServiceAccountToken: false
      volumes:
        - name: gcp-service-account
          secret:
            secretName: captcha-service-account-secret
      containers:
        - name: auth
          image: us-central1-docker.pkg.dev/tmv-checklist-dev/docker-image-registry/checklist-auth:TAG
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: gcp-service-account
              mountPath: /app/secrets
              readOnly: true
          resources:
            limits:
              cpu: 100m
              memory: 256Mi
              ephemeral-storage: '2Gi'
---
# auth-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-srv
spec:
  selector:
    app: auth
  ports:
    - name: auth
      protocol: TCP
      port: 3000
      targetPort: 3000
