tmv-checklist/infra/k8s/company-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: company-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: company-service
  template:
    metadata:
      labels:
        app: company-service
    spec:
      automountServiceAccountToken: false
      containers:
        - name: company-service
          image: us-central1-docker.pkg.dev/tmv-checklist-dev/docker-image-registry/checklist-company:TAG
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              cpu: 100m
              memory: 256Mi
              ephemeral-storage: '2Gi'
---
# company-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: company-srv
spec:
  type: ClusterIP
  selector:
    app: company-service
  ports:
    - name: company
      protocol: TCP
      port: 3000
      targetPort: 3000
