tmv-checklist/infra/k8s/job-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: job-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: job-service
  template:
    metadata:
      labels:
        app: job-service
    spec:
      automountServiceAccountToken: false
      containers:
        - name: job-service
          image: us-central1-docker.pkg.dev/tmv-checklist-dev/docker-image-registry/checklist-job:TAG
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              cpu: 100m
              memory: 256Mi
              ephemeral-storage: '2Gi'
---
# job-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: job-srv
spec:
  type: ClusterIP
  selector:
    app: job-service
  ports:
    - name: job
      protocol: TCP
      port: 3000
      targetPort: 3000
