tmv-checklist/infra/k8s/minio-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minio
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: minio
    spec:
      automountServiceAccountToken: false
      volumes:
        - name: storage
          persistentVolumeClaim:
            claimName: minio-pv-claim
      containers:
        - name: minio
          image: minio/minio:latest
          resources:
            limits:
              memory: '512Mi'
              cpu: '200m'
              ephemeral-storage: '5Gi'
          args:
            - server
            - /storage
          ports:
            - containerPort: 9000
              hostPort: 9000
          volumeMounts:
            - name: storage
              mountPath: '/storage'
---
# minio-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio-service
spec:
  type: LoadBalancer
  ports:
    - port: 9000
      targetPort: 9000
      protocol: TCP
  selector:
    app: minio
