tmv-checklist/infra/k8s/mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      automountServiceAccountToken: false
      containers:
        - name: mongodb
          image: mongo:4.4
          resources:
            limits:
              memory: '256Mi'
              cpu: 150m
              ephemeral-storage: '5Gi'
          ports:
            - containerPort: 27017
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb
spec:
  selector:
    app: mongodb
  ports:
    - port: 27017
