tmv-checklist/infra/k8s/nats-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nats-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nats
  template:
    metadata:
      labels:
        app: nats
    spec:
      automountServiceAccountToken: false
      containers:
        - name: nats
          image: nats-streaming:latest
          resources:
            limits:
              memory: '521Mi'
              cpu: 200m
          args:
            [
              '-p',
              '4222',
              '-m',
              '8222',
              '-hbi',
              $(HEARTBEAT_INTERVAL),
              '-hbt',
              $(HEARTBEAT_TIMEOUT),
              '-hbf',
              $(HEARTBEAT_RETRY_COUNT),
              '-cid',
              $(NATS_CLUSTER_ID),
            ]
---
# nats-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nats-srv
spec:
  selector:
    app: nats
  ports:
    - name: client
      protocol: TCP
      port: 4222
      targetPort: 4222
    - name: monitoring
      protocol: TCP
      port: 8222
