tmv-checklist/infra/k8s/support-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: support-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: support-service
  template:
    metadata:
      labels:
        app: support-service
    spec:
      automountServiceAccountToken: false
      containers:
        - name: support-service
          image: us-central1-docker.pkg.dev/tmv-checklist-dev/docker-image-registry/checklist-support:TAG
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              cpu: 100m
              memory: 256Mi
              ephemeral-storage: '2Gi'
---
# support-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: support-srv
spec:
  type: ClusterIP
  selector:
    app: support-service
  ports:
    - name: support
      protocol: TCP
      port: 3000
      targetPort: 3000
