tmv-checklist/infra/k8s/template-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: template-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: template
  template:
    metadata:
      labels:
        app: template
    spec:
      automountServiceAccountToken: false
      containers:
        - name: template
          image: us-central1-docker.pkg.dev/tmv-checklist-dev/docker-image-registry/checklist-template:TAG
          imagePullPolicy: Always
          resources:
            limits:
              memory: '256Mi'
              cpu: '100m'
              ephemeral-storage: '2Gi'
---
# template-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: template-srv
spec:
  selector:
    app: template
  ports:
    - name: template
      protocol: TCP
      port: 3000
      targetPort: 3000
